--- a/Working with ExpressJs/public/css/add-product.css
+++ b/Working with ExpressJs/public/css/add-product.css
@@ -1,56 +1,3 @@
-
-body {
-    padding: 0;
-    margin: 0;
-    font-family: sans-serif;
-}
-
-main {
-    padding: 1rem;
-}
-
-.main-header {
-    width: 100%;
-    height: 3.5rem;
-    background-color: #dbc441;
-    padding: 0 1.5rem;
-}
-
-.main-header__nav {
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.main-header__item-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-.main-header__item {
-    margin: 0 1rem;
-    padding: 0;
-}
-
-.main-header__item a {
-    text-decoration: none;
-    color: black;
-}
-
-.main-header__item a:hover,
-.main-header__item a:active,
-.main-header__item a.active {
-    color: #3e00a1;
-}
-
-.product-form {
-    width: 20rem;
-    max-width: 90%;
-    margin: auto;
-}
-
 .form-control {
     margin: 1rem 0;
 }
@@ -59,25 +6,15 @@ main {
 .form-control input {
     display: block;
     width: 100%;
+    margin-bottom: 0.25rem;
 }
 
 .form-control input {
-    border: 1px solid #dbc441;
+    border: 1px solid #a1a1a1;
     font: inherit;
     border-radius: 2px;
 }
 
-button {
-    font: inherit;
-    border: 1px solid #3e00a1;
-    color: #3e00a1;
-    background: white;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-button:hover,
-button:active {
-    background-color: #3e00a1;
-    color: white;
+.form-control input:focus {
+    outline-color: #00695c;
 }
