--- a/Working with ExpressJs/views/shop/product-list.ejs
+++ b/Working with ExpressJs/views/shop/product-list.ejs
@@ -21,7 +21,11 @@
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">Add to Cart</button>
+                            <form action="/add-to-cart" method="POST">
+                                <input type="hidden" name="id" value="<%= product._id %>">
+                                <button class="btn">Add to Cart</button>
+                            </form>
+                            
                         </div>
                     </article>
                 <% } %>
