--- a/Working with ExpressJs/views/admin/edit-product.ejs
+++ b/Working with ExpressJs/views/admin/edit-product.ejs
@@ -1,8 +1,30 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-    <%- include('../includes/navigation.ejs') %>
+   <%- include('../includes/navigation.ejs') %>
 
-
+    <main>
+        <form class="product-form" action="/admin/edit-product" method="POST">
+            <div class="form-control">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title" value="<%= prod.title %>">
+            </div>
+            <div class="form-control">
+                <label for="imageUrl">Image Url</label>
+                <input type="text" name="imageUrl" id="imaegUrl" value="<%= prod.imageUrl %>">
+            </div>
+            <div class="form-control">
+                <label for="price">Price</label>
+                <input type="number" name="price" id="price" value="<%= prod.price %>">
+            </div>
+            <div class="form-control">
+                <label for="description">Description</label>
+                <textarea name="description" id="description" rows="5" ><%= prod.description %></textarea>
+            </div>
+            <button class="btn" type="submit">Update Product</button>
+        </form>
+    </main>
 <%- include('../includes/end.ejs') %>
