--- a/Working with ExpressJs/views/admin/products.ejs
+++ b/Working with ExpressJs/views/admin/products.ejs
@@ -21,8 +21,8 @@
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <a href='/admin/edit-route' class="btn">Edit</a>
-                            <form action="/admin/delete-route" method="POST">
+                            <a href="/admin/edit-route/<%= product.id %>" class="btn">Edit</a>
+                            <form action="/admin/delete-route" method="DELETE">
                                 <input type="hidden" name="id" value="<%= product._id %>"/>
                                 <button type="submit" class="btn">Delete</button>
                             </form>
