--- a/Working with ExpressJs/views/shop/index.ejs
+++ b/Working with ExpressJs/views/shop/index.ejs
@@ -21,7 +21,10 @@
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">Add to Cart</button>
+                            <form action="/cart" method="POST">
+                                <button class="btn" type="submit">Add to Cart</button>
+                                <input type="hidden" name="id" value="<%= product.id %>">
+                            </form>
                         </div>
                     </article>
                 <% } %>
